# dakara-base

./: .appveyor.yml  .coveralls.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  appveyor.yml  bump_version.sh  create_archive.sh  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/dakara_base/: config.py  directory.py  safe_workers.py  version.py
tests/: test_config.py  test_safe_workers.py  test_safe_workers_integration.py
tests/integration/: test_safe_workers.py
tests/resources/: empty_runner.py
tests/unit/: test_safe_workers.py
